Renaming folders. Also working in some tasks of exercise 2 of DWEC

--- a/DWEC/exercise2-numbers-strings/index.html
+++ b/DWEC/exercise2-numbers-strings/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>2. Exercice of names and strings</title>
+    <title>2. Exercise of names and strings</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="scripts.js"></script>
@@ -22,9 +22,9 @@
         <button>5. "a" first and last position</button>
         <button>6. Extracting "la"</button>
         <button>7. Changing "la" for "*"</button>
-        <button>8. First letter at start and end</button>
-        <button>9. No spaces</button>
-        <button>10. Space for middle dash</button>
+        <button onclick="firstAndLastLetter()">8. First letter at start and end</button>
+        <button onclick="noSpaces()">9. No spaces</button>
+        <button onclick="spaceForMiddleDash()">10. Space for middle dash</button>
         <button>11. Acronym</button>
         <button>12. Email validation</button>
         <button>13. Number sign</button>
