--- a/DWEC/exercise2-numbers-strings/index.html
+++ b/DWEC/exercise2-numbers-strings/index.html
@@ -7,34 +7,42 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="scripts.js"></script>
-    <style></style>
+    <style>
+        * {font-family: Verdana; margin-top: 10px; }
+        .main-input {background-color: #ff9400; border:1px solid #000000;}
+        .event-buttons {background-color: #1f7ae0; border:1px solid black;}
+        .event-buttons button {margin-left: 15px; margin-top: 15px; margin-bottom: 15px;}
+        .result{color:white; background-color: #000000; border:1px solid black; height: 80px;}
+        p {margin-left: 15px}
+    </style>
 
 </head>
 <body>
-    <div>
-        <p>Insert some data here: </p> <input id="main-content"/>
+    <div class="main-input">
+        <p>Insert some data here: <input id="main-content"/> </p>
     </div>
-    <div>
+    <div class="event-buttons">
         <button onclick="emptyString()">1. Empty String?</button>
         <button onclick="reversedString()">2. Reversed String</button>
         <button onclick="howManyA()">3. How many "a"</button>
-        <button>4. Before "a"</button>
-        <button>5. "a" first and last position</button>
-        <button>6. Extracting "la"</button>
-        <button>7. Changing "la" for "*"</button>
+        <button onclick="stringBeforeA()">4. String before "a"</button>
+        <button onclick="firstAndLastAPositions()">5. First and last position of all "a"</button>
+        <button onclick="deletingLA()">6. Deleting "la"</button>
+        <button onclick="changingLA()">7. Changing "la" for "*"</button>
         <button onclick="firstAndLastLetter()">8. First letter at start and end</button>
         <button onclick="noSpaces()">9. No spaces</button>
         <button onclick="spaceForMiddleDash()">10. Space for middle dash</button>
-        <button>11. Acronym</button>
-        <button>12. Email validation</button>
-        <button>13. Number sign</button>
+        <button onclick="acronym()">11. Acronym</button>
+        <button onclick="emailValidation()">12. Email validation</button>
+        <button onclick="numberSign()">13. Number sign</button>
         <button onclick="isANumber()">14. Is a number?</button>
         <button onclick="roundADouble()">15. Round a double</button>
         <button onclick="doubleDecimals()">16. Just double decimals</button>
         <button onclick="div19And3Decimals()">17. Dividing by 19 displaying 3 decimals</button>
     </div>
-    <div>
-        <p>Result: </p><p id="result-tag"></p>
+    <div class="result">
+        <p><b>Result</b></p>
+        <p id="result-tag"></p>
     </div>
 </body>
 </html>
