Finished all exercises. 16 working and 12 made. Code comments wip

--- a/DWEC/exercise2-numbers-strings/index.html
+++ b/DWEC/exercise2-numbers-strings/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>2. Exercise of names and strings</title>
+    <title>2. Exercise of numbers and strings</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="scripts.js"></script>
