--- a/DWEC/exercise3-arrays/index3.html
+++ b/DWEC/exercise3-arrays/index3.html
@@ -28,10 +28,10 @@
     <button onclick="concatenation()">2. Concatenation</button>
     <button onclick="secondItemDeleted()">3. Second item deleted</button>
     <button onclick="secondItemDeletedAndAddingNews()">4. Second item deleted and adding 2 more</button>
-    <button onclick="sortingArray()">5. Alphabetically order</button>
-    <button onclick="">6. Minor to major order</button>
-    <button onclick="">7. Major to minor order</button>
-    <button onclick="">8. Oder by major length</button>
+    <button onclick="sortingArrayAlphabetically()">5. Alphabetically order</button>
+    <button onclick="sortingArrayMinorToMajor()">6. Minor to major order</button>
+    <button onclick="sortingArrayMajorToMinor()">7. Major to minor order</button>
+    <button onclick="">8. Order by major length</button>
     <button onclick="">9. Array of lenghts</button>
     <button onclick="separatedByMidDash()">10. Items separated by "-"</button>
     <button onclick="">11. Acronym</button>
