all working. Missing number 10 and 14

--- a/DWEC/exercise3-arrays/index3.html
+++ b/DWEC/exercise3-arrays/index3.html
@@ -31,17 +31,17 @@
     <button onclick="sortingArrayAlphabetically()">5. Alphabetically order</button>
     <button onclick="sortingArrayMinorToMajor()">6. Minor to major order</button>
     <button onclick="sortingArrayMajorToMinor()">7. Major to minor order</button>
-    <button onclick="">8. Order by major length</button>
-    <button onclick="">9. Array of lenghts</button>
+    <button onclick="orderByMajorLength()">8. Order by major length</button>
+    <button onclick="arrayOfLengths()">9. Array of lenghts</button>
     <button onclick="separatedByMidDash()">10. Items separated by "-"</button>
-    <button onclick="">11. Acronym</button>
-    <button onclick="">12. Deleting if minor to 5 char length</button>
-    <button onclick="">13. Sum of the items with "foreach"</button>
+    <button onclick="acronym()">11. Acronym</button>
+    <button onclick="deletingMinorOf5Length()">12. Deleting if minor to 5 char length</button>
+    <button onclick="sumItemsForEach()">13. Sum of the items with "foreach"</button>
     <button onclick="">14. How many times "la" in the array</button>
-    <button onclick="">15. Sum of the items with "reduce"</button>
-    <button onclick="">16. Num max of array with foreach</button>
-    <button onclick="">17. </button>
-    <button onclick="">18. </button>
+    <button onclick="sumItemsReduce()">15. Sum of the items with "reduce"</button>
+    <button onclick="maxNum()">16. Num max of array with foreach</button>
+    <button onclick="arrayRestructuring()">17. Array restructuring</button>
+    <button onclick="capCuaArray()">18. Cap-cua array</button>
 </div>
 <div class="result">
     <p><b>Result</b></p>
