exercicies 10 and 14 done and working

--- a/DWEC/exercise3-arrays/index3.html
+++ b/DWEC/exercise3-arrays/index3.html
@@ -37,7 +37,7 @@
     <button onclick="acronym()">11. Acronym</button>
     <button onclick="deletingMinorOf5Length()">12. Deleting if minor to 5 char length</button>
     <button onclick="sumItemsForEach()">13. Sum of the items with "foreach"</button>
-    <button onclick="">14. How many times "la" in the array</button>
+    <button onclick="laInArray()">14. How many times "la" in the array</button>
     <button onclick="sumItemsReduce()">15. Sum of the items with "reduce"</button>
     <button onclick="maxNum()">16. Num max of array with foreach</button>
     <button onclick="arrayRestructuring()">17. Array restructuring</button>
