--- a/DIW/exercise5-sass-and-scss/scss-test.html
+++ b/DIW/exercise5-sass-and-scss/scss-test.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="eS">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Test</title>
 </head>
 <body>
-    <h1>This is a test</h1>
+    <h1>This is the main header</h1>
     <footer>This is a footer</footer>
 </body>
 </html>
