--- a/DIW/exercise6-bootstrap/bootstrap-grid.html
+++ b/DIW/exercise6-bootstrap/bootstrap-grid.html
@@ -41,7 +41,7 @@
 
 <div class="container-fluid">
     <div class="row header">
-        <div class="col-12"><img src="img-grid/logo.jpg"/></div>
+        <div class="col-12"><img src="img-grid/logo.jpg" alt=""/></div>
     </div>
     <div class="row photos">
         <div class="moustache col-xs-12 col-md-6 col-lg-4 col-xl-4"><img src="img-grid/mustache1.jpg"/><p class="normal">Moustache 1</p></div>
