--- a/DWEC/exercises6-vueCDN/02-v-if.html
+++ b/DWEC/exercises6-vueCDN/02-v-if.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <div id="app">
-    <span v-if="seen">Now you see me</span>
+    <span v-if="number > 50">Now you see me</span>
+    <span v-else>I'm the second option span :/</span>
 </div>
 </body>
 <script>
@@ -17,6 +18,7 @@
         data() {
             return {
                 seen: false, // Cannot see the span :/
+                number: 50
             }
         },
     }
